--- a/IdentityTestApp/wwwroot/css/site.css
+++ b/IdentityTestApp/wwwroot/css/site.css
@@ -61,7 +61,11 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-  font-family: Roboto sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight:300;
+  color: #505050;
+  line-height: 30px;
 }
 .footer {
   position: absolute;
@@ -69,6 +73,39 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.footer-07 {
+    /*background-color: #212121;*/
+    background-color: #343a40 !important;
+}
+
+footer-07 .row1 .call-now {
+    color: #fff;
+    font-size: 13px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding-top: 12px;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.footer-07 .row1 .footer-logo {
+    text-align: center;
+}
+
+.footer-07 .row1 .mail {
+    color: #fff;
+    font-size: 13px;
+    letter-spacing: 3px;
+    padding-top: 12px;
 }
 
 div.login-logout-tab div.card-header {
